1.0.4
=====
 * Never use growisofs parameter -dvd-compat with DVD-RW media in restricted overwrite mode
 * Unmount medium before DVD formatting

1.0.3
=====
 * Reverted to old behaviour of reloading medium before verification. Not enough
   testing had been done before introducing this and some systems fail to read the
   medium before reload (Bugs 147297, 147328, 147420, 147698).
 * Do not crash when the currently playing audio project item is removed (Bug 147548).
 * Added desktop actions to handle empty media with K3b.
 * Fixed read retry when reading data tracks (Bug 147778)
 * K3b's dialogs now honor the global button layout setting (Bug 147799)
 * Do not crash on mp3 files without tags if compiled with taglib support (Bug 142651)
 * Do not allow to copy a rewritable media to itself.
 * Fixed crash on startup with devices that return bogus GET PERFORMANCE data (Bug 147676)

1.0.2
=====
 * Properly determine the capacity of complete CD-R(W) media.
 * Mark a data project as modified if files are renamed.
 * Allow adding of all actions to the welcome window (Bug 145866)
 * Added "NoDisplay=true" property to k3b-cue.desktop and k3b-iso.desktop 
 * Fixed supported write speed detection on some devices
 * No reload before verification and between writing sessions (CD copy + Mixed Mode CD) anymore

1.0.1
=====
 * Fixed crash when using the Device menu without a selected device.
 * Fixed DVD copy when reading from a DVD+RW.
 * Fixed --without-alsa configure check
 * Fixed a crash in Video DVD ripping when the title does not contain an audio stream
 * Only use the mkisofs parameters -biblio, -copyright, and -abstract if they have been set. Using them
   with invalid values (empty) seems to result in broken iso images sometimes.
 * Better compatibility with recent transcode development branch
 * Fixed Multisession import size handling.
 * Fixed Lame quality preset handling.
 * Made libk3bdevice really thread-safe. This fixes the disabled DMA bug!