@@ -550,7 +550,8 @@ void K3bGrowisofsWriter::slotProcessExited( KProcess* p )
 
     int s = d->speedEst->average();
     if( s > 0 )
-      emit infoMessage( i18n("Average overall write speed: %1 KB/s (%2x)").arg(s).arg(KGlobal::locale()->formatNumber((double)s/1385.0), 2), INFO );
+      emit infoMessage( i18n("Average overall write speed: %1 KB/s (%2x)")
+                        .arg(s).arg(KGlobal::locale()->formatNumber((double)s/1385.0), 2), INFO );
 
     if( simulate() )
       emit infoMessage( i18n("Simulation successfully completed"), K3bJob::SUCCESS );
